# mockachu

./: .gitignore  CONTRIBUTING.md  GITHUB_SEO.md  LICENSE  MANIFEST.in  Makefile  README.md  api.py  app.py  build.spec  build_enhanced.py  mockachu.manifest  mockachu_app.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_copy_functionality.py  version_info.txt
.github/workflows/: ci.yml  release.yml
mockachu/: __init__.py  api.py  app.py  version.py
mockachu/generators/: biology_generator.py  calendar_generator.py  car_generator.py  cinema_generator.py  color_generator.py  custom_list_generator.py  field_builder_generator.py  file_generator.py  generator.py  generator_identifier.py  geo_generator.py  it_generator.py  money_generator.py  person_generator.py  sequence_generator.py  string_generator.py  yes_no_generator.py
mockachu/localization/: manager.py
mockachu/localization/strings/: en.json
mockachu/res/: animals.txt  bank_card_types.json  banks.txt  common_colors.json  currencies.json  email_domains.txt  female_first_names.txt  file_extensions.txt  html_colors.json  iban_formats.json  male_first_names.txt  movies.txt  sentences.txt  series.txt  websites.txt  world_cities.csv
mockachu/services/: available_generators.py  data_generator.py  file_reader.py  file_writer.py  gui_file_writer.py
mockachu/ui/: configuration_dialogs.py  data_generation_thread.py  dataset_warning_dialog.py  field_config_widget.py  main_window.py
mockachu/ui/styles/: theme_manager.py
tests/: __init__.py  test_api.py  test_calendar_generator.py  test_color_generator_fixed.py  test_data_generator_fixed.py  test_field_builder_generator_fixed.py  test_generators.py  test_geo_generator_fixed.py  test_it_generator.py  test_localization_manager_fixed.py  test_money_generator_fixed.py  test_person_generator.py  test_sequence_generator_fixed.py  test_string_generator.py
