[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockachu"
version = "v1.1.0"
description = "Free open-source mock data generator with GUI and REST API. Generate realistic fake data, test data, and sample data for development, testing, API testing, and database seeding. 15+ data generators for personal, financial, geographic, and technical data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mockachu Contributors"}
]
maintainers = [
    {name = "Mockachu Contributors"}
]
keywords = [
    "mock-data-generator", "fake-data-generator", "test-data-generator", 
    "dummy-data", "random-data", "sample-data", "testing", "api", "gui", 
    "development", "database-seeding", "json-generator", "csv-generator",
    "api-testing", "qa-tools", "test-fixtures", "mock-server", "faker",
    "rest-api", "swagger", "realistic-data", "bulk-data", "data-generation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Desktop Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "blinker>=1.7.0",
    "click>=8.1.7",
    "Flask>=3.0.3",
    "flask-cors>=4.0.1",
    "flask-restx>=1.3.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "ulid>=1.1",
    "ujson>=5.9.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.7.0",
    "qdarkstyle>=3.2.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
]
build = [
    "pyinstaller>=6.0.0",
    "setuptools>=61.0",
    "wheel",
]
all = [
    "mockachu[gui,dev,build]"
]

[project.urls]
Homepage = "https://github.com/sahzudin/mockachu"
Repository = "https://github.com/sahzudin/mockachu"
Issues = "https://github.com/sahzudin/mockachu/issues"
Documentation = "https://github.com/sahzudin/mockachu#readme"

[project.scripts]
mockachu = "mockachu.app:main"
mock-data-api = "mockachu.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mockachu*"]

[tool.setuptools.package-data]
"mockachu" = [
    "res/*",
    "ui/res/*",
    "ui/styles/*",
    "localization/strings/*",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "v1.0.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=mockachu --cov-report=html --cov-report=term-missing"
